<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/medida_base"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/digite_aqui"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/unidade_medida"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/unidades_de_medida"
        app:layout_constraintBottom_toBottomOf="@+id/medida_base"
        app:layout_constraintStart_toEndOf="@+id/medida_base"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto_conversão"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/converter_para"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medida_base" />

    <RadioGroup
        android:id="@+id/opcoes_de_unidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checkedButton="@id/unidade_mm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_conversão">

        <RadioButton
            android:id="@+id/unidade_mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mm" />

        <RadioButton
            android:id="@+id/unidade_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm" />

        <RadioButton
            android:id="@+id/unidade_dm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/dm" />

        <RadioButton
            android:id="@+id/unidade_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/m" />

        <RadioButton
            android:id="@+id/unidade_dam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/dam" />

        <RadioButton
            android:id="@+id/unidade_hm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/hm" />

        <RadioButton
            android:id="@+id/unidade_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/km" />
    </RadioGroup>

    <Button
        android:id="@+id/botao_converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/converter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/opcoes_de_unidades"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/medida_convertida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/botao_converter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/opcoes_de_unidades"
        app:layout_constraintTop_toBottomOf="@+id/unidade_medida"
        tools:text="00,00" />


</androidx.constraintlayout.widget.ConstraintLayout>